--- a/bio.html
+++ b/bio.html
@@ -35,10 +35,10 @@
 				biosignal-controlled rhythm game designed for accessibility.
 			</p>
 
-			<p>
-				Outside of work, I enjoy listening to and making experimental electronic music and
-				jazzy hip-hop beats, as well as creating digital audio-reactive art.
-			</p>
+			<!-- <p> -->
+			<!-- 	Outside of work, I enjoy listening to and making experimental electronic music and -->
+			<!-- 	jazzy hip-hop beats, as well as creating digital audio-reactive art. -->
+			<!-- </p> -->
 
 			<br>
 
