--- a/bio.html
+++ b/bio.html
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="dark">
+<body>
 
 	<button class="corner-btn top-left" id="homebtn">[ * ]</button>
 	<div class="corner-label top-right" id="dateLabel"></div>
 	<button class="corner-btn bottom-left" id="langbtn">[ EN ]</button>
-	<button class="corner-btn bottom-right" id="themeToggle">[ ☀ ]</button>
+	<button class="corner-btn bottom-right" id="themeToggle"></button>
 	<main class="layout single-column">
 
 		<section class="bio-page">
@@ -22,11 +22,12 @@
 
 			<p>
 				I am currently studying the brain and the autonomic nervous system. Specifically,
-				my research focuses on the brain-heart connection and how it relates to mental fatigue.
+				my research focuses on the connection between the brain and the heart and how it relates
+				to mental fatigue.
 			</p>
 
 			<p>
-				I am also interested in teleological questions in physiology, such as why phenomena like
+				I am also interested in teleological questions in physiology, such as why
 				fatigue, neural connectivity, and regulation exist in the first place.
 			</p>
 
