updated css layout mobile friendliness

--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,7 @@
 
 	<button class="corner-btn top-left" id="homebtn">[ * ]</button>
 	<div class="corner-label top-right" id="dateLabel"></div>
-	<button class="corner-btn bottom-left" id="langbtn">[ EN ]</button>
+	<!-- <button class="corner-btn bottom-left" id="langbtn">[ EN ]</button> -->
 	<button class="corner-btn bottom-right" id="themeToggle"></button>
 	<main class="layout single-column">
 
